<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:backgroundTint="@color/white"
tools:context=".Productos.NuevoProducto">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="354dp"
                android:layout_height="62dp"
                android:layout_marginTop="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/viewNombreP"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:hint="@string/nombre" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout2"
                    android:layout_width="244dp"
                    android:layout_height="62dp"
                    android:layout_marginRight="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.491"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/viewCodigo"
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:hint="@string/codigo" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/scan_button"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:onClick="abrirScan"
                    android:text="@string/scan" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout31"
                    android:layout_width="170dp"
                    android:layout_height="62dp"
                    android:layout_marginRight="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.491"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/viewPrecioC"
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:digits="0123456789."
                        android:hint="@string/precioC"
                        android:inputType="numberDecimal" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout3"
                    android:layout_width="170dp"
                    android:layout_height="62dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.491"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/viewPrecioV"
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:digits="0123456789."
                        android:hint="@string/precio"
                        android:inputType="numberDecimal" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout5"
                    android:layout_width="170dp"
                    android:layout_height="62dp"
                    android:layout_marginRight="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.491"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/viewCantidad"
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:digits="0123456789."
                        android:hint="@string/cantidad"
                        android:inputType="numberDecimal"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout51"
                    android:layout_width="170dp"
                    android:layout_height="62dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.491"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/viewStockMinimo"
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:digits="0123456789."
                        android:hint="@string/stockMinimo"
                        android:inputType="numberDecimal"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout4"
                android:layout_width="354dp"
                android:layout_height="62dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/viewDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:hint="@string/descrip"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/Unidad"
                android:layout_width="354dp"
                android:layout_height="62dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:spinnerMode="dropdown" />
            <Spinner
                android:id="@+id/spinnerEstado"
                android:layout_width="354dp"
                android:layout_height="62dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:spinnerMode="dropdown" />

            <Button
                android:id="@+id/btnGuarda"
                android:layout_width="354dp"
                android:layout_height="73dp"
                android:layout_marginTop="34dp"
                android:backgroundTint="?attr/actionModeSplitBackground"
                android:text="@string/aceptar"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />



        </LinearLayout>

    </ScrollView>
</LinearLayout>
</android.support.constraint.ConstraintLayout>