<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/viewCorreo"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:backgroundTint="@color/white"
tools:context=".Productos.VerProducto">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="14dp"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="354dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/viewNombreP"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:hint="@string/nombre" />
            </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="244dp"
                android:layout_height="60dp"
                android:layout_marginRight="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/viewCodigoP"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:hint="@string/codigo" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/scan_button"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/scan" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout3"
                android:layout_width="170dp"
                android:layout_height="62dp"
                android:layout_marginRight="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/viewPrecioP"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:hint="@string/precioC" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout31"
                android:layout_width="170dp"
                android:layout_height="62dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/viewPrecioPV"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:hint="@string/precio" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:gravity="center">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout4"
                    android:layout_width="170dp"
                    android:layout_height="62dp"
                    android:layout_marginRight="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.491"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/viewCantidadP"
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:digits="0123456789."
                        android:inputType="numberDecimal"
                        android:hint="@string/cantidad"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout51"
                    android:layout_width="170dp"
                    android:layout_height="62dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.491"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/viewSctokMinimo"
                        android:layout_width="match_parent"
                        android:digits="0123456789."
                        android:inputType="numberDecimal"
                        android:layout_height="54dp"
                        android:hint="@string/stockMinimo"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout5"
                android:layout_width="354dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/viewDescripcionP"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:hint="@string/descrip" />
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/Unidad"
                android:layout_width="354dp"
                android:layout_height="62dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:spinnerMode="dropdown" />
            <Spinner
                android:id="@+id/spinnerEstado"
                android:layout_width="354dp"
                android:layout_height="62dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:spinnerMode="dropdown" />

            <Button
                android:id="@+id/btnGuardaP"
                android:layout_width="354dp"
                android:layout_height="60dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="?attr/actionModeSplitBackground"
                android:text="@string/aceptar"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fabEditar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:clickable="true"
                    android:gravity="center"
                    android:src="@drawable/ic_edit"
                    app:backgroundTint="@android:color/holo_orange_dark" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fabEliminar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:gravity="center"
                    android:src="@drawable/ic_delete"
                    app:backgroundTint="@android:color/holo_red_dark" />

            </LinearLayout>



        </LinearLayout>

    </ScrollView>
</LinearLayout>
</android.support.constraint.ConstraintLayout>